# tmdb-cli

./: .env  .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
notebook/: main.ipynb
src/tmdb_cli/: api.py  app.py  display.py
tests/: test_api.py
